# Neuron_Protein_Noise

./: .gitignore  .gitmodules  notes.tex
code/: G_matrix_21.xlsx  expansion.py  numeric_coefficient_extraction.py  simple_model_numeric_expansion.py  simplest_model_expansion.mw  simplest_model_expansion.py  simplest_model_numeric_expansion.py  tmp.py
code/c++/: CMakeLists.txt  Neuron.cpp  Neuron.hpp  compile.sh  setup.py
code/c++/bindings/: Neuron_binding.cpp  bindings.cpp
code/c++/bindings/compartments/: Dendritic_segment_binding.cpp  Soma_binding.cpp  Synapse_binding.cpp
code/c++/bindings/engines/: Analytic_engine_binding.cpp  Morphologic_engine_binding.cpp
code/c++/compartments/: Compartment.cpp  Compartment.hpp  Dendritic_segment.cpp  Dendritic_segment.hpp  Soma.cpp  Soma.hpp  Synapse.cpp  Synapse.hpp  Type.cpp
code/c++/cpp_examples/: gillespie.cpp  heterosynaptic_plasticity_num.cpp  properly_discretised_linear_neuron.cpp  properly_discretised_simple_neuron.cpp  semiinfinite_dendrite.cpp  semiinfinite_dendrite_ODE.cpp  semiinfinite_dendrite_ODE_sem_test.cpp  susceptibilities.cpp
code/c++/engines/analytic/: Analytic_engine.cpp  Analytic_engine.hpp
code/c++/engines/stochastic/: Gillespie_engine.cpp  Gillespie_engine.hpp
code/c++/engines/stochastic/events/: Event.cpp  Event.hpp  Gene_activation.cpp  Gene_deactivation.cpp  MRNA_creation.cpp  MRNA_decay.cpp  MRNA_hop_backward.cpp  MRNA_hop_forward.cpp  Prot_hop_backward.cpp  Prot_hop_forward.cpp  Protein_creation.cpp  Protein_decay.cpp
code/c++/examples/: compile.sh  full_neuron_HP_num.cpp  heterosynaptic_plasticity_MC.cpp
code/c++/include/: Neuron.hpp
code/c++/include/compartments/: Compartment.hpp  Dendritic_segment.hpp  Soma.hpp  Spine.hpp  Synapse.hpp
code/c++/include/engines/analytic/: Analytic_engine.hpp
code/c++/include/engines/morphologic/: Morphologic_engine.hpp
code/c++/include/junctions/: Den_syn_junction.hpp  Junction.hpp
code/c++/junctions/: Den_den_junction.cpp  Den_den_junction.hpp  Den_syn_junction.cpp  Junction.cpp  Junction.hpp  Som_den_junction.cpp  Type.cpp
code/c++/main/: compile.sh  correlations_in_time.cpp  gillespie.cpp  heterosynaptic_plasticity.cpp  heterosynaptic_plasticity_MC.cpp  heterosynaptic_plasticity_num.cpp  main.cpp  optimised_moments.cpp  pcc_densities_for_different_discretisations.cpp  properly_discretised_simple_neuron.cpp  semiinfinite_dendrite.cpp  semiinfinite_dendrite_ODE.cpp  semiinfinite_dendrite_ODE_sem_test.cpp  semiinfinite_dendrite_ODE_tests.cpp  stationary_moments_for_cosyne.cpp  stationary_moments_theor.cpp  susceptibilities.cpp  time_correlations.cpp  time_correlations_with_MC.cpp
code/c++/python_examples/: manual_neuron.py  manual_neuron_creation.py  realistic_soma.py  semiinfinite_dendrite.py  swc_file_loading.py  translation_spots.py  visualisation.py
code/c++/randomisation/: PRNG.hpp
code/c++/src/: Neuron.cpp
code/c++/src/compartments/: Compartment.cpp  Dendritic_segment.cpp  Soma.cpp  Synapse.cpp  Type.cpp
code/c++/src/engines/analytic/: Analytic_engine.cpp
code/c++/src/engines/morphologic/: Morphologic_engine.cpp
code/c++/src/junctions/: Den_den_junction.cpp  Den_syn_junction.cpp  Junction.cpp  Som_den_junction.cpp
code/generalised/: compartment.py
code/old/: PDE_solution_check.py  numeric_expansion.py  simple_model_Pearson_correlations.ods  simplest_model_numeric_expansion.py  tmp.py
code/old/generalised/: neuron.py
code/scripts/python/: PCC_decay_with_size.py  aux_noise.py  full_neuron_HP.py  full_neuron_HP_aux.py  full_neuron_HP_num.py  full_neuron_HP_num_aux.py  gillespie.py  gillespie_distribution.py  gillespie_distribution_aux.py  gillespie_new.py  gillespie_new_aux.py  gillespy2_soma.py  gillespy2_soma_aux.py  gillespy2_test.py  heterosynaptic_plasticity.py  heterosynaptic_plasticity_aux.py  heterosynaptic_plasticity_num.py  heterosynaptic_plasticity_num_aux.py  noise.py  noise_simple.py  noise_simple_aux.py  pcc_densities_for_different_discretisations.py  proper_discretisation_plots.py  proper_discretisation_plots_200um.py  proper_discretisation_plots_200um_60.py  proper_discretisation_plots_500um.py  proper_discretisation_plots_500um_expectations.py  semiinfinite_dendrite_analytical_solution.py  semiinfinite_dendrite_analytical_solution_tests.py  stationary_time_correlations_with_MC.py  stationary_time_correlations_with_MC_aux.py  stationary_time_correlations_with_MC_load_aux.py  susceptibilities.py  time_correlations.py  time_correlations_extra_ds.py
code/scripts/python/for_BBSRC/: stationary_num_MC_2_genes_aux_new.py  stationary_num_MC_2_genes_new.py
code/scripts/python/for_cosyne/: full_neuron_HP_num_MC.py  full_neuron_HP_num_MC_aux.py  stationary_num_MC.py  stationary_num_MC_2_genes.py  stationary_num_MC_2_genes_aux.py  stationary_num_MC_2_genes_aux_new.py  stationary_num_MC_2_genes_aux_new_single_trajectory.py  stationary_num_MC_2_genes_new.py  stationary_num_MC_aux.py  susceptibilities.py
notes/: bibliography.bib  notes.tex
